story-vault-ve v1.4